syntax = "proto3";

package riddler.protobuf;

import "google/protobuf/timestamp.proto";

message ContentDefinition {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  string content_type = 3;
  string content_id = 4;
  string title = 5;
  int32 version = 6;
  int32 schema_version = 7;
  string definition_json = 8;
}
