syntax = "proto3";

package riddler.protobuf;

import "riddler/protobuf/definition.proto";
import "riddler/protobuf/slug.proto";

message CreateDefinitionRequest {
  Definition definition = 1;
}

message CreateDefinitionResponse {}

message CreateSlugRequest {
  Slug slug = 1;
}

message CreateSlugResponse {}

message UpdateSlugRequest {
  Slug slug = 1;
}

message UpdateSlugResponse {}

service ContentManagement {
  rpc CreateDefinition(CreateDefinitionRequest) returns (CreateDefinitionResponse) {}
  rpc CreateSlug(CreateSlugRequest) returns (CreateSlugResponse) {}
  rpc UpdateSlug(UpdateSlugRequest) returns (UpdateSlugResponse) {}
}
