syntax = "proto3";

package riddler.protobuf;

import "google/protobuf/timestamp.proto";

message Slug {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  string name = 4;
  string status = 5;
  string content_definition_id = 6;
  string interaction_identity = 7;
  string target_predicate = 8;
}

enum Interval {
  SECOND = 0;
  MINUTE = 1;
  HOUR = 2;
  DAY = 3;
  WEEK = 4;
  MONTH = 5;
  YEAR = 6;
}

message EventCount {
  string event_name = 1;
  int32 count = 2;
}

message SlugStats {
  Interval interval = 1;
  repeated EventCount event_counts = 2;
}
